--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "md5": "^2.3.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.47.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.33.4"
   }
 }
