--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "image-size": "^1.1.1",
     "md5": "^2.3.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
