--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "https-proxy-agent": "^7.0.4",
     "image-size": "^1.1.1",
     "md5": "^2.3.0",
     "mongoose": "^8.4.0",
