--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,8 +13,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: 123qwe!@#
 
       - name: Run deployment script on server
-        run: sshpass -p dieto123qwe!@# ssh root@66.248.207.178 'echo hello'
+        run: ssh user@your_server_ip 'bash -s' < deploy_script.sh
